--- a/package.json
+++ b/package.json
@@ -1,49 +1,37 @@
-css{
+{
+  "name": "discord.js-heroku",
+  "version": "1.0.0",
+  "description": "Discord.js bot on Heroku",
+  "main": "bot.js",
   "dependencies": {
-    "and": "0.0.3",
-    "hastebin-gen": "^1.3.1",
-    "anti-spam": "^0.2.7",
-    "array-sort": "^1.0.0",
-    "gif-search": "^2.0.1",
-    "ascii-data-table": "^2.1.1",
-    "canvas": "^1.6.11",
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
-    "child_process": "^1.0.2",
-    "common-tags": "^1.8.0",
-    "dateformat": "^3.0.3",
-    "cleverbot.io": "^1.0.4",
-    "discord-anti-spam": "^1.1.2",
+    "node": "8.x",
     "discord.js": "^11.3.2",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-binaries": "^4.0.0",
-    "figlet": "^1.2.0",
-    "new": "0.1.1",
-    "file-system": "^2.2.2",
-    "forever": "^0.15.3",
-    "fortnite": "^4.1.1",
-    "fortnite-api": "^2.12.2",
+    "moment": "^2.22.1",
     "get-youtube-id": "^1.0.0",
-    "giphy-api": "^1.2.7",
-    "goo.gl": "^0.1.4",
-    "google-it": "^1.1.3",
+    "common-tags": "^1.8.0",
+    "gif-search": "^2.0.1",
     "google-translate-api": "^2.3.0",
-    "hastebin-gen": "^1.3.1",
-    "i": "^0.3.6",
-    "jimp": "^0.2.28",
     "math-expression-evaluator": "^1.2.17",
-    "moment": "^2.22.2",
-    "node-opus": "^0.3.0",
-    "npm": "^6.2.0",
-    "opusscript": "0.0.6",
-    "pretty-ms": "^3.2.0",
+    "node-gyp": "^3.7.0",
+    "opusscript": "^0.0.6",
     "queue": "^4.4.2",
-    "quick.db": "^6.3.2",
-    "short-number": "^1.0.6",
+    "rebuild": "^0.1.2",
+    "request": "^2.88.0",
     "simple-youtube-api": "^5.0.2",
-    "sqlite": "^2.9.2",
-    "table": "^4.0.3",
-    "winston": "^3.0.0",
     "youtube-info": "^1.2.0",
-    "ytdl-core": "^0.21.1",
-    "zalgolize": "^1.2.4"
-  }
+    "ytdl-core": "^0.21.1"
+  },
+
+  "keywords": [
+    "heroku",
+    "discord.js"
+  ],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/synicalsyntax/discord.js-heroku/issues"
+  },
+  "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme"
 }
